Fixed main menu overflow

--- a/src/components/Rules.css
+++ b/src/components/Rules.css
@@ -6,14 +6,13 @@
   height: 100%;
   display: flex;
   background-color: var(--purple);
+  overflow-y: auto;
+  padding: 20px 0;
 
   .rules-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 335px;
     height: 586px;
+    margin: auto;
     border: 3px solid var(--black);
     border-bottom: 10px solid var(--black);
     border-radius: 40px;
@@ -75,12 +74,9 @@
     }
 
     .check-button {
-      position: absolute;
-      bottom: -32px;
-      left: 50%;
-      transform: translateX(-50%);
       width: 64px;
       height: 64px;
+      margin: 13px auto;
       background-color: transparent;
       border: none;
       cursor: pointer;
@@ -102,6 +98,10 @@
 
       .objective-description {
         margin-bottom: 29px;
+      }
+
+      .check-button {
+        margin: 10px auto;
       }
     }
   }
